# capture-point-walking

./: .gitignore  CMakeLists.txt
cmake/: AddInstallAllRobotFiles.cmake
modules/: CMakeLists.txt
modules/WalkingControllersComponents/: CMakeLists.txt
modules/WalkingControllersComponents/app/: BasicNonLinearIKComponent.ini  BasicPIDHandler.ini  BasicRobotComponent.ini  BasicUnicycleGeneratorComponent.ini  BasicUnicycleJoypadSource.ini  CMakeLists.txt
modules/WalkingControllersComponents/include/: JointsSinks.h  JointsSources.h  NonLinearIKComponent.h  PIDHandlerComponent.h  RobotComponent.h  UnicycleGeneratorComponent.h  UnicycleJoypadSource.h  UnicyclePortSource.h  UnicycleReferenceSource.h  Utils.h  WalkingControllersComponents.h  WalkingCoordinatorComponent.h  YarpSigVectorPortSink.h  YarpSigVectorPortSource.h
modules/WalkingControllersComponents/src/: JointsSinks.cpp  JointsSources.cpp  NonLinearIKComponent.cpp  PIDHandlerComponent.cpp  RobotComponent.cpp  UnicycleGeneratorComponent.cpp  UnicycleJoypadSource.cpp  UnicyclePortSource.cpp  UnicycleReferenceSource.cpp  Utils.cpp  WalkingCoordinatorComponent.cpp  YarpSigVectorPortSink.cpp  YarpSigVectorPortSource.cpp
modules/WalkingControllersComponents/thrifts/: walkingCommands.thrift
modules/ZMPPreviewWalkingController/: CMakeLists.txt
modules/ZMPPreviewWalkingController/app/robots/iCubGazeboV2_5/: homePoseBalancing.ini
modules/ZMPPreviewWalkingController/app/robots/iCubGenova02/: homePoseBalancing.ini
modules/ZMPPreviewWalkingController/app/robots/icubGazeboSim/: walkingV2Coordinator.ini  walkingV2MPC.ini  walkingV2PIDparameters.ini  walkingV2Params.ini  walkingV2Unicycle.ini  zmpWalking.ini  zmpWalkingPreviewSettings.ini  zmpWalkingUnicycle.ini
modules/ZMPPreviewWalkingController/include/: PreviewController.h  ZMPWalkingCoordinator.h
modules/ZMPPreviewWalkingController/src/: PreviewController.cpp  ZMPWalkingCoordinator.cpp  main.cpp
src/TrajectoryPlanner/src/: TrajectoryGenerator.cpp
src/WalkingModule/src/: Module.cpp
